// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BulletText /> should match snapshot for custom bullet text 1`] = `
<ul
  class="base list display_flex row_mobile_base 3_mobile_base 3_mobile_base align_stretch wrapping_noWrap"
>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base display_flex width_full height_full position_relative flexShrink_0"
    >
      <span>
        <i
          class="base display_block"
          role="presentation"
        >
          <svg
            class="base display_block width_full height_full"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </li>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World
      </span>
    </div>
  </li>
</ul>
`;

exports[`<BulletText /> should match snapshot for default bullet text 1`] = `
<ul
  class="base list display_flex row_mobile_base 3_mobile_base 3_mobile_base align_stretch wrapping_noWrap"
>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <div
        class="base display_flex position_relative pill_mobile_base backgroundColours_green200_base center_mobile_base flexShrink_0 center_mobile_base bullet_base"
      >
        <span
          class="base textAlign_left root_base sizes_2_base colours_success_base fontWeight_normal_base base"
        >
          •
        </span>
      </div>
    </div>
  </li>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World!
      </span>
    </div>
  </li>
</ul>
`;

exports[`<BulletText /> should match snapshot for ordered bullet text 1`] = `
<ul
  class="base list display_flex row_mobile_base 3_mobile_base 3_mobile_base align_stretch wrapping_noWrap"
>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <div
        class="base display_flex position_relative pill_mobile_base backgroundColours_green200_base center_mobile_base flexShrink_0 center_mobile_base bullet_base"
      >
        <span
          class="base textAlign_left root_base sizes_2_base colours_success_base fontWeight_normal_base base"
        >
          ?
        </span>
      </div>
    </div>
  </li>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World!
      </span>
    </div>
  </li>
</ul>
`;

exports[`<BulletText /> should match snapshot for primary bullet text with custom bullet character 1`] = `
<ul
  class="base list display_flex row_mobile_base 3_mobile_base 3_mobile_base align_stretch wrapping_noWrap"
>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <div
        class="base display_flex position_relative pill_mobile_base backgroundColours_green200_base center_mobile_base flexShrink_0 center_mobile_base bullet_base"
      >
        <span
          class="base textAlign_left root_base sizes_2_base colours_success_base fontWeight_normal_base base"
        >
          ?
        </span>
      </div>
    </div>
  </li>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World!
      </span>
    </div>
  </li>
</ul>
`;

exports[`<BulletText /> should match snapshot for secondary bullet text with custom bullet character 1`] = `
<ul
  class="base list display_flex row_mobile_base 3_mobile_base 3_mobile_base align_stretch wrapping_noWrap"
>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base align_centre"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <div
        class="base display_flex position_relative pill_mobile_base backgroundColours_gray200_base center_mobile_base flexShrink_0 center_mobile_base bullet_base"
      >
        <span
          class="base textAlign_left root_base sizes_2_base colours_dark_base fontWeight_normal_base base"
        >
          ?
        </span>
      </div>
    </div>
  </li>
  <li
    class="base flexGrow_0 3_mobile_base 3_mobile_base"
  >
    <div
      class="base display_flex width_full height_full"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        Hello World!
      </span>
    </div>
  </li>
</ul>
`;
